# routes/index.js
@@ -11,4 +11,8 @@ router.use('/products', require('./products'));
 
 router.use('/categories', require('./categories'));
 
+router.use('/orders', require('./orders'));
+
+router.use('/reviews', require('./reviews'));
+
 module.exports = router;
